# oneVPL-cpu

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  BUILD.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  INSTALL.md  README.md  requirements-dev.txt  third-party-programs-AOM.txt  third-party-programs.txt
api/: CMakeLists.txt  CPPLINT.cfg
api/onevpl/: export.h  mfxadapter.h  mfxbrc.h  mfxcommon.h  mfxdefs.h  mfxdispatcher.h  mfxdispatcherprefixedfunctions.h  mfximplcaps.h  mfxjpeg.h  mfxla.h  mfxmvc.h  mfxplugin.h  mfxsession.h  mfxstructures.h  mfxvideo++.h  mfxvideo.h  mfxvp8.h  mfxvp9.h  mfxvstructures.h  version.h  version.hpp  vpl.h  vpl.hpp
api/vpl/: export.h  mfxadapter.h  mfxbrc.h  mfxcommon.h  mfxdefs.h  mfxdispatcherprefixedfunctions.h  mfxjpeg.h  mfxla.h  mfxmvc.h  mfxplugin.h  mfxsession.h  mfxstructures.h  mfxvideo++.h  mfxvideo.h  mfxvp8.h  mfxvp9.h  mfxvstructures.h  version.h  version.hpp  vpl.h  vpl.hpp
cpu/: CMakeLists.txt
cpu/ext/ffmpeg-codecs/: CMakeLists.txt
cpu/ext/ffmpeg-svt/: CMakeLists.txt
cpu/src/: cpu_common.cpp  cpu_common.h  cpu_decode.cpp  cpu_decode.h  cpu_decodevpp.cpp  cpu_decodevpp.h  cpu_encode.cpp  cpu_encode.h  cpu_frame.cpp  cpu_frame.h  cpu_frame_pool.cpp  cpu_frame_pool.h  cpu_vpp.cpp  cpu_vpp.h  cpu_workstream.cpp  cpu_workstream.h  frame_lock.cpp  frame_lock.h  libmfxvplsw.cpp  libmfxvplsw_caps.h  libmfxvplsw_caps_dec.h  libmfxvplsw_caps_enc.h  libmfxvplsw_caps_enc_h264.h  libmfxvplsw_caps_enc_openh264.h  libmfxvplsw_caps_enc_x264.h  libmfxvplsw_caps_vpp.h  libmfxvplsw_core.cpp  libmfxvplsw_decode.cpp  libmfxvplsw_decvpp.cpp  libmfxvplsw_encode.cpp  libmfxvplsw_vpl.cpp  libmfxvplsw_vpp.cpp
cpu/src/windows/: libmfxsw.def
examples/: CMakeLists.txt
examples/content/: cars_1280x720.ivf
examples/dpcpp-blur/: CMakeLists.txt  README.md  sample.json
examples/dpcpp-blur/src/: dpcpp-blur.cpp
examples/hello-decode/: CMakeLists.txt  README.md  sample.json
examples/hello-decode/src/: hello-decode.cpp
examples/hello-dpcpp/: CMakeLists.txt  README.md  sample.json
examples/hello-dpcpp/src/: hello-dpcpp.cpp
examples/hello-encode/: CMakeLists.txt  README.md  sample.json
examples/hello-encode/src/: hello-encode.cpp
examples/hello-vpp/: README.md  hello-vpp.vcxproj  sample.json
examples/hello-vpp/src/: hello-vpp.cpp
examples/hello_decode/: CMakeLists.txt  main.cpp
examples/hello_decode_onevpl/: CMakeLists.txt  main.cpp
examples/hello_encode/: CMakeLists.txt  main.cpp
examples/sample_common/: CMakeLists.txt
examples/sample_common/include/: abstract_splitter.h  avc_bitstream.h  avc_headers.h  avc_nal_spl.h  avc_spl.h  avc_structures.h  base_allocator.h  brc_routines.h  current_date.h  d3d11_allocator.h  d3d11_device.h  d3d_allocator.h  d3d_device.h  decode_render.h  general_allocator.h  hw_device.h  mfx_buffering.h  mfx_itt_trace.h  mfx_plugin_base.h  mfx_plugin_module.h  mfx_samples_config.h  mfxvideo++.h  parameters_dumper.h  plugin_loader.h  plugin_utils.h  preset_manager.h  sample_defs.h  sample_types.h  sample_utils.h  surface_auto_lock.h  time_statistics.h  v4l2_util.h  vaapi_allocator.h  vaapi_device.h  vaapi_utils.h  vaapi_utils_android.h  vaapi_utils_drm.h  vaapi_utils_x11.h  vpp_ex.h
examples/sample_common/src/: avc_bitstream.cpp  avc_nal_spl.cpp  avc_spl.cpp  base_allocator.cpp  brc_routines.cpp  d3d11_allocator.cpp  d3d11_device.cpp  d3d_allocator.cpp  d3d_device.cpp  decode_render.cpp  general_allocator.cpp  mfx_buffering.cpp  parameters_dumper.cpp  plugin_utils.cpp  preset_manager.cpp  sample_utils.cpp  sysmem_allocator.cpp  v4l2_util.cpp  vaapi_allocator.cpp  vaapi_device.cpp  vaapi_utils.cpp  vaapi_utils_android.cpp  vaapi_utils_drm.cpp  vaapi_utils_x11.cpp  vpp_ex.cpp
examples/sample_decode/: CMakeLists.txt
examples/sample_decode/include/: pipeline_decode.h
examples/sample_decode/src/: pipeline_decode.cpp  sample_decode.cpp
examples/sample_encode/: CMakeLists.txt
examples/sample_encode/include/: pipeline_encode.h  pipeline_user.h
examples/sample_encode/src/: pipeline_encode.cpp  pipeline_user.cpp  sample_encode.cpp
examples/video_decoder/: frame_alloc.cpp  frame_alloc.h  main.cpp  video_decoder.cpp  video_decoder.h  video_decoder.sln  video_decoder.vcxproj  video_decoder.vcxproj.filters
examples/vpl-app/: CMakeLists.txt  vpl-app.cpp
libvpl/: CMakeLists.txt
libvpl/api/: CMakeLists.txt
libvpl/api/vpl/: export.h  mfxadapter.h  mfxbrc.h  mfxcommon.h  mfxdefs.h  mfxdispatcherprefixedfunctions.h  mfxjpeg.h  mfxla.h  mfxmvc.h  mfxsession.h  mfxstructures.h  mfxvideo++.h  mfxvideo.h  mfxvp8.h  mfxvp9.h  mfxvstructures.h  version.h  version.hpp  vpl.h  vpl.hpp
libvpl/dispatcher/: CMakeLists.txt
libvpl/dispatcher/linux/: mfxloader.cpp  mfxloader.h  mfxvideo_functions.h
libvpl/dispatcher/windows/: mfx_critical_section.h  mfx_dispatcher.cpp  mfx_dispatcher.h  mfx_dispatcher_defs.h  mfx_dispatcher_log.cpp  mfx_dispatcher_log.h  mfx_dxva2_device.h  mfx_exposed_functions_list.h  mfx_function_table.cpp  mfx_library_iterator.h  mfx_load_dll.cpp  mfx_load_dll.h  mfx_win_reg_key.cpp  mfx_win_reg_key.h
libvpl/include/vpl/: export.h  mfxadapter.h  mfxbrc.h  mfxcommon.h  mfxdefs.h  mfxdispatcherprefixedfunctions.h  mfxjpeg.h  mfxla.h  mfxmvc.h  mfxsession.h  mfxstructures.h  mfxvideo++.h  mfxvideo.h  mfxvp8.h  mfxvp9.h  mfxvstructures.h  version.h  version.hpp  vpl.h  vpl.hpp
libvpl/mfx_dispatch/: CPPLINT.cfg
libvpl/mfx_dispatch/Linux/: CMakeLists.txt  mfxaudio_functions.h  mfxloader.cpp  mfxloader.h  (+2 more)
libvpl/src/: cpu_common.cpp  cpu_decode.cpp  cpu_encode.cpp  cpu_vpp.cpp  cpu_workstream.h  libmfx.def  libmfxvplsw.cpp  libmfxvplsw_core.cpp  libmfxvplsw_decode.cpp  libmfxvplsw_encode.cpp  libmfxvplsw_vpp.cpp  mingw_wa.cpp  version.cpp
test/unit/: CMakeLists.txt  main.cpp
tools/cli/: CMakeLists.txt  vpl-common.h  vpl-decenc.cpp  vpl-decode-newloader.cpp  vpl-decode-newmemory.cpp  vpl-decode.cpp  vpl-decvpp.cpp  vpl-encode-newmemory.cpp  vpl-encode.cpp  vpl-inspect.cpp  vpl-new-dispatcher.cpp  vpl-vpp-newmemory.cpp  vpl-vpp.cpp  vpl-vppenc.cpp
(+283 files in other folders)
